examples/exploit-examples/klee-out-0/test000002.exec.err
Error: AEG: Find a possible exploit
File: t1.c
Line: 112
assembly.ll line: 8960
Stack: 
	#000008960 in __klee_posix_wrapped_main (=1, =93825052159248) at t1.c:112
	#100007095 in __user_main (=1, =93825040161792, =93825040161808) at runtime/POSIX/klee_init_env.c:245
	#200000545 in __uClibc_main (=93825040794632, =1, =93825040161792, =0, =0, =0, =0) at libc/misc/internals/__uClibc_main.c:401
	#300000710 in main (=1, =93825040161792)
